# AeroDoc

./: ARCHITECTURE_AND_PITFALLS.md  LICENSE  README.md  index.html  install.bat  install.ps1  package-lock.json  package.json  start-aerodoc.bat  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
